--- a/05_GET/pizza/public/index.html
+++ b/05_GET/pizza/public/index.html
@@ -11,7 +11,14 @@
     <h1>Orders</h1>
   </header>
 
-  <main>
+    <main>
+    <!-- Input Section -->
+    <section class="input-section">
+      <input type="text" id="order-name"   placeholder="Name of the orderer..."/>
+      <input type="text" id="order-pizza" placeholder="Pizza ..."/>
+      <button onclick="addClick()" id="add-btn">Add Order</button>
+    </section>
+
     <div id="status" class="status">Load data...</div>
 
     <div class="table-wrapper">
