--- a/05_GET/plf_wmc/public/index.html
+++ b/05_GET/plf_wmc/public/index.html
@@ -3,31 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orders</title>
+    <title>Room Lights</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>Orders</h1>
+    <h1>Lights</h1>
   </header>
 
-    <main>
-    <!-- Input Section -->
-    <section class="input-section">
-      <input type="text" id="order-name"   placeholder="Name of the orderer..."/>
-      <input type="text" id="order-pizza" placeholder="Pizza ..."/>
-      <button onclick="addClick()" id="add-btn">Add Order</button>
-    </section>
-
+  <main>
     <div id="status" class="status">Load data...</div>
 
     <div class="table-wrapper">
-      <table id="orders-table" class="table" aria-describedby="status">
+      <table id="rooms-table" class="table" aria-describedby="status">
         <thead>
           <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Pizza</th>
+            <th>Light ID</th>
+            <th>Raum</th>
           </tr>
         </thead>
         <tbody>
