--- a/Movie/public/index.html
+++ b/Movie/public/index.html
@@ -13,14 +13,22 @@
 
   <main>
     <div id="status" class="status">Load data...</div>
+    <!-- Input Setion -->
+    <section class="input-section">
+      <input type="text" id="movie-title" placeholder="Name of the movie"/>
+      <input type="text" id="movie-year" placeholder="Year of release"/>
+      <!-- Listener -->
+      <button onclick="addClick()" id="add-btn">Add Movie</button>
+    </section>
 
     <div class="table-wrapper">
       <table id="movies-table" class="table" aria-describedby="status">
         <thead>
           <tr>
-            <th>Movie id</th>
-            <th>Movie Title</th>
-            <th>Movie Year</th>
+            <th>ID</th>
+            <th>Title</th>
+            <th>Year</th>
+            <th>Remove</th>
           </tr>
         </thead>
         <tbody>
