--- a/Movie/public/index.html
+++ b/Movie/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movies Database</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="/images/favico.png">
 </head>
 <body>
   <header>
@@ -13,7 +14,7 @@
 
   <main>
     <div id="status" class="status">Load data...</div>
-    <!-- Input Setion -->
+    <!-- Input Section -->
     <section class="input-section">
       <input type="text" id="movie-title" placeholder="Name of the movie"/>
       <input type="text" id="movie-year" placeholder="Year of release"/>
@@ -28,6 +29,7 @@
             <th>ID</th>
             <th>Title</th>
             <th>Year</th>
+            <th>Rating</th>
             <th>Remove</th>
           </tr>
         </thead>
